2005-08-12  Roland McGrath  <roland@redhat.com>

	* libeblP.h (struct ebl): Add bss_plt_p hook.
	* eblopenbackend.c (default_bss_plt_p): New function.
	(fill_defaults): Use it.
	* eblbsspltp.c: New file.
	* Makefile.am (gen_SOURCES): Add it.
	* libebl.h: Declare ebl_bss_plt_p.
	* ppc_symbol.c (ppc_bss_plt_p): New function.
	* libebl_ppc.h: Declare it.
	* ppc_init.c (ppc_init): Use it.
	* ppc64_symbol.c (ppc64_bss_plt_p): New function.
	* libebl_ppc64.h: Declare it.
	* ppc64_init.c (ppc64_init): Use it.

	* ebl_check_special_symbol.c: New file.
	* Makefile.am (gen_SOURCES): Add it.
	* libebl.h: Declare ebl_check_special_symbol.
	* libeblP.h (struct ebl): Add check_special_symbol hook.
	* eblopenbackend.c (default_check_special_symbol): New function.
	(fill_defaults): Use it.
	* ppc_symbol.c (ppc_check_special_symbol): New function.
	* libebl_ppc.h: Add prototype.
	* ppc_init.c (ppc_init): Use it.
	* ppc64_symbol.c (ppc64_check_special_symbol): New function.
	* libebl_ppc64.h: Add prototype.
	* ppc64_init.c (ppc64_init): Use it.

2005-08-07  Ulrich Drepper  <drepper@redhat.com>

	* ppc_init.c: Add support for new DT_PPC_* and R_PPC_* values.
	* ppc_symbol.c: Likewise.
	* libebl_ppc.h: Likewise.
	* ppc64_init.c: There is now also a dynamic_tag_check functions
	* ppc64_symbol.c: Add dynamic_tag_check.
	* libebl_ppc64.h: Add prototype.
	* alpha_init.c: Add support for new DT_ALPHA_* value.
	* alpha_symbol.c: Likewise.
	* libebl_alpha.h: Likewise.

2005-08-03  Ulrich Drepper  <drepper@redhat.com>

	* libebl_alpha.map: Remove unnecessary exports.
	* libebl_arm.map: Likewise.
	* libebl_i386.map: Likewise.
	* libebl_ia64.map: Likewise.
	* libebl_ppc.map: Likewise.
	* libebl_ppc64.map: Likewise.
	* libebl_sh.map: Likewise.
	* libebl_sparc.map: Likewise.
	* libebl_x86_64.map: Likewise.

2005-08-02  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (libebl_a_SOURCES): Add eblelfclass.c, eblelfdata.c,
	and eblelfmachine.c.